# domainnamesystem

./: CITATION.cff  Cargo.toml  LICENSE  README.md  rustfmt.toml  server.toml
.github/: FUNDING.yml
crates/core/: Cargo.toml
crates/core/src/: dns_server.rs  lib.rs  macros.rs
crates/core/src/actions/: build_dns_packet.rs  handle_query.rs  lookup.rs  mod.rs  recursive_lookup.rs
crates/core/src/enums/: byte_packet_error.rs  dns_record.rs  mod.rs  query_type.rs  result_code.rs
crates/core/src/functions/: make_a_record.rs  make_aaaa_record.rs  make_mcn_record.rs  mod.rs  write_a_record.rs  write_aaaa_record.rs  write_cnns_record.rs  write_mx_record.rs
crates/core/src/structs/: byte_packet_buffer.rs  dns_header.rs  dns_packet.rs  dns_question.rs  dns_server_config.rs  look_at_record.rs  mod.rs  worker_task.rs
crates/core/src/utils/: handle_look_at.rs  initial_message.rs  mod.rs  send_response.rs
crates/core/src/workers/: adjust_workers.rs  handle_worker_task.rs  mod.rs  worker_pool.rs
