[package]
name = "dns_core"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

homepage = "https://github.com/eduardobaginskicosta/domainnamesystem"
authors = ["Eduardo Baginski Costa <eduardobcosta1234@gmail.com>"]

[lib]
name = "dns_core"
path = "src/lib.rs"

[features]
default = ["scalability"]
legacy = []
scalability = []

[dependencies]
local-ip-address = "0.6.5"
tokio = { version = "1.48.0", features = ["full"] }
