[package]
name = "dns_core"
version = "0.1.0"
edition = "2024"
homepage = "https://github.com/eduardobaginskicosta/domainnamesystem"
license = "MIT"
publish = false

[lib]
name = "dns_core"
path = "src/lib.rs"

[dependencies]
local-ip-address = "0.6.5"
tokio = { version = "1.48.0", features = ["full"] }

[features]
default = ["scalability"]
legacy = []
scalability = []
